# POO-TPs-Agostini

./: LICENSE  README.md
POO_1-Agostini/: AccionHistorial.cpp  AccionHistorial.h  CMakeLists.txt  HistorialRepository.cpp  HistorialRepository.h  HistorialWidget.cpp  HistorialWidget.h  LoginWidget.cpp  LoginWidget.h  MainWidget.cpp  MainWidget.h  POO_1-Agostini.pro  SessionManager.cpp  SessionManager.h  TPEditorDialog.cpp  TPEditorDialog.h  TPRepository.cpp  TPRepository.h  TPRowWidget.cpp  TPRowWidget.h  TrabajoPractico.cpp  TrabajoPractico.h  Usuario.h  UsuarioRepository.cpp  UsuarioRepository.h  main.cpp
